--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "lucide-vue-next": "^0.555.0",
     "pinia": "^3.0.4",
     "sass": "^1.94.2",
+    "socket.io-client": "^4.8.1",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
   },
