--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/app.ts",
-    "build": "tsc",
+    "build": "tsc && npm run copy-templates",
+    "copy-templates": "copyfiles -u 1 src/templates/**/*.html dist/",
     "start": "node dist/app.js"
   },
   "keywords": [],
@@ -24,7 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
     "morgan": "^1.10.1",
-    "nodemailer": "^7.0.11",
+    "resend": "^6.6.0",
     "socket.io": "^4.8.1",
     "zod": "^4.1.13"
   },
@@ -37,8 +38,8 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.10.1",
-    "@types/nodemailer": "^7.0.4",
     "@types/socket.io": "^3.0.1",
+    "copyfiles": "^2.4.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
