v1 fixing vercel.json and cors

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,12 +1,9 @@
 {
     "version": 2,
-    "buildCommand": "npm run build",
-    "installCommand": "npm install",
-    "framework": null,
     "rewrites": [
         {
-            "source": "/(.*)",
-            "destination": "/dist/app.js"
+            "source": "/api/(.*)",
+            "destination": "/src/app.ts"
         }
     ],
     "headers": [
@@ -14,22 +11,27 @@
             "source": "/api/(.*)",
             "headers": [
                 {
+                    "key": "Access-Control-Allow-Credentials",
+                    "value": "true"
+                },
+                {
                     "key": "Access-Control-Allow-Origin",
                     "value": "https://www.silicity.digital"
                 },
                 {
                     "key": "Access-Control-Allow-Methods",
-                    "value": "GET, POST, PUT, PATCH, DELETE, OPTIONS"
+                    "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
                 },
                 {
                     "key": "Access-Control-Allow-Headers",
-                    "value": "Content-Type, Authorization"
-                },
-                {
-                    "key": "Access-Control-Allow-Credentials",
-                    "value": "true"
+                    "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization"
                 }
             ]
         }
-    ]
+    ],
+    "functions": {
+        "src/app.ts": {
+            "maxDuration": 10
+        }
+    }
 }
